--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </header>
 
     <nav><!--navegador -->
-        <a href="https://api.whatsapp.com/send?phone=5513974114023" target="_blank">Telefone para contato: (13) 97411-4023</a>
+        <a href="https://api.whatsapp.com/send?phone=5513974114023" target="_blank">Contato: (13) 97411-4023</a>
+        <a href="precos/precos.html" target="_blank">Orçamento</a>
         
     </nav>
 
