--- a/precos/precos.html
+++ b/precos/precos.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <H1>Verificador de Preço Medio</H1>
+        <H1>Verificador de Preço Médio</H1>
     </header>
     <section>
         <div>
