--- a/precos/precos.html
+++ b/precos/precos.html
@@ -31,7 +31,7 @@
         </div>
     </section>
     <footer>
-        <p>*Preço pode sofrer varioções dependendo das expecificações do serviço</p>
+        <p>*Preço pode sofrer variações dependendo das expecificações do serviço</p>
     </footer>
     <div>
         <a href="https://api.whatsapp.com/send?phone=5513997245567" class="whatsapp_float" target="_blank">
