--- a/precos/precos.html
+++ b/precos/precos.html
@@ -27,7 +27,7 @@
            </p>
         </div>
         <div id="res">
-            Preencha os dados acima para ver o preço medio!
+            Preencha os dados acima para ver o preço médio!
         </div>
     </section>
     <footer>
