--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 <!-- alt+shift+A para centário -->
 </head>
 <body>
+         
     <header><!-- titulo -->
-        <h1>Amarildo Carreto</h1> 
-        <h2>Carretos com caminhão baú<br>litoral e Capital de São Paulo</h2>
+            <picture>
+                <source media="(max-width: 530px)" srcset="imagens/logoP.png" style="width: auto;">
+                <source media="(max-width: 930px)" srcset="imagens/logoM.png">
+                <img src="imagens/logoG.png" alt="logo amarildo">
+            </picture>
     </header>
-
+        
     <nav><!--navegador -->
         <a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank">Contato: (13) 99724-5567</a>
         <a href="precos/precos.html" target="_blank">Orçamento</a>
