--- a/precos/precos.html
+++ b/precos/precos.html
@@ -18,9 +18,9 @@
            <input type="number" name="txtano" id="txtano" min="0">
            <p>Destino:
             <input type="radio" name="radsex" id="mas" checked>
-            <label for="mas">Baixada Santitas</label><br>
+            <label for="mas">Baixada Santita</label><br>
             <input type="radio" name="radsex" id="fem">
-            <label for="fem">Outros</label>
+            <label for="fem">Outras Regiões</label>
            </p>
            <p>
             <input type="button" value="Verificar" onclick="verificar()" id="bt">
