--- a/precos/precos.html
+++ b/precos/precos.html
@@ -6,17 +6,25 @@
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amarildo Preços</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style2.css">
 </head>
 <body>
-    <header>
-        <H1>Verificador de Preço Médio</H1>
+    <header><!-- titulo -->
+        <picture>
+            <source media="(max-width: 530px)" srcset="../imagens/logoP.png" style="width: auto;">
+            <source media="(max-width: 930px)" srcset="../imagens/logoM.png">
+            <img src="../imagens/logoG.png" alt="logo amarildo">
+        </picture>
+        <H2>Preço Médio Orçamento</H1>
     </header>
-    <section>
+    <nav><!--navegador -->
+        <a href="../index.html">Voltar</a>
+    </nav>
+    <section id="sectionpreco">
         <div>
            <p>Quantidade de Km</p> 
            <input type="number" name="txtano" id="txtano" min="0">
-           <p>Destino:
+           <p>Destino:<br>
             <input type="radio" name="radsex" id="mas" checked>
             <label for="mas">Baixada Santita</label><br>
             <input type="radio" name="radsex" id="fem">
@@ -30,8 +38,9 @@
             Preencha os dados acima para ver o preço médio!
         </div>
     </section>
-    <footer>
+    <footer id="footerpreco">
         <p>*Preço pode sofrer variações dependendo das expecificações do serviço</p>
+        <p>CNPJ: 29.051.979/0001-09</p>
     </footer>
     <div>
         <a href="https://api.whatsapp.com/send?phone=5513997245567" class="whatsapp_float" target="_blank">
