--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
         <h2>Como vai funciona o frete ?</h2>
         
         <p>Utilizando um caminhão equipado com um compartimento fechado  feita de metal, conhecido como baú, que oferece proteção e segurança para a carga durante o transporte.</p>
+        <p>Tendo as seguintes especificações: 6,60 Metros de Comprimento 2,20 Metros de Larguras e 2,40 Metros de Altura  </p>
         <picture>
-            <source media="(max-width: 530px)" srcset="imagens/001.jpg">
-            <img src="imagens/002.jpg" alt="imagem de caminhão baú" class="caminhao">
+            <source media="(max-width: 530px)" srcset="imagens/001.jpeg">
+            <img src="imagens/002.jpeg" alt="imagem de caminhão baú" class="caminhao">
         </picture>
-        <p>Faremos sua mudanças residencial ou de escritório, em <strong>Praia Grande e região</strong> para todo o <strong>Estado de São Paulo</strong>.</p>
+        <p>Faremos sua mudança residencial ou de escritório, em <strong>Praia Grande e região</strong> para todo o <strong>Estado de São Paulo</strong>.</p>
         <p>Desmontados e montamos guarda roupas, armários, estantes, camas e sofás (exceto furações em paredes).</p>
     </section>
 
