--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <h2>Como vai funciona o frete ?</h2>
         
         <p>Utilizando um caminhão equipado com um compartimento fechado  feita de metal, conhecido como baú, que oferece proteção e segurança para a carga durante o transporte.</p>
-        <p>Tendo as seguintes especificações: 6,60 Metros de Comprimento 2,20 Metros de Larguras e 2,40 Metros de Altura  </p>
+        <strong>
+            <p>Tendo as seguintes especificações: 6,60 Metros de Comprimento, 2,20 Metros de Larguras e 2,40 Metros de Altura  </p>
+        </strong>
         <picture>
             <source media="(max-width: 530px)" srcset="imagens/001.jpeg">
             <img src="imagens/002.jpeg" alt="imagem de caminhão baú" class="caminhao">
@@ -63,7 +65,9 @@
         </ul>
     </aside>
 
-    <p>Faça um orçamento com a nossa empresa !!! <a href="precos/precos.html" >Clique Aqui</a></p>
+    <strong>
+        <p>Faça um orçamento com a nossa empresa !!! <a href="precos/precos.html" >Clique Aqui</a></p>
+    </strong>
 
     <section>
         <p></p>
