--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         <h2>Como vai funciona o frete ?</h2>
         
-        <p>Utilizando um caminhão equipado com um compartimento fechado  feita de metal, conhecido como baú, que oferece proteção e segurança para a carga durante o transporte.</p>
+        <p>Utilizando um caminhão equipado com um compartimento fechado feito de metal, conhecido como baú, que oferece proteção e segurança para a carga durante o transporte.</p>
         <strong>
             <p>Tendo as seguintes especificações: 6,60 Metros de Comprimento, 2,20 Metros de Larguras e 2,40 Metros de Altura  </p>
         </strong>
