--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <p>Utilizando um caminhão equipado com um compartimento fechado feito de metal, conhecido como baú, que oferece proteção e segurança para a carga durante o transporte.</p>
         <strong>
-            <p>Tendo o compartimento baú com 6,60 Metros de Comprimento, 2,20 Metros de Larguras e 2,40 Metros de Altura  </p>
+            <p>Tendo o compartimento baú com 6,60 Metros de Comprimento, 2,20 Metros de Larguras e 2,40 Metros de Altura.</p>
         </strong>
         <picture>
             <source media="(max-width: 530px)" srcset="imagens/001.jpeg">
