--- a/precos/precos.html
+++ b/precos/precos.html
@@ -16,9 +16,13 @@
             <img src="../imagens/logoG.png" alt="logo amarildo">
         </picture>
         <H2>Preço Médio Orçamento</H1>
+
+        <div id="botao">
+                <a href="../index.html"><img src="../imagens/volta.png" id="navfoto" alt="Botão" onclick="mostrarLinks()"></a>
+        </div>  
     </header>
     <nav><!--navegador -->
-        <a href="../index.html">Voltar</a>
+        <a href="../index.html" id="button" class="menu">Voltar</a>
     </nav>
     <section id="sectionpreco">
         <div>
