--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
         <p>Desmontados e montamos guarda roupas, armários, estantes, camas e sofás (exceto furações em paredes).</p>
     </section>
     <div>
+    <section>
+        <h2 id="p3">Sobre nós</h2>
+        <p></p>
+        <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/1nyYZmujcPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+    </section>
         <!-- Conteúdo da div -->
     <aside> <!-- conteudo extra -->
         <h3 id="p2">Porque nos contratar ?</h3>
@@ -92,12 +97,8 @@
     <strong>
         <p>Faça um orçamento com a nossa empresa !!! <a href="precos/precos.html" >Clique Aqui</a></p>
     </strong>
-
+        <p></p>
     <section>
-        <p></p>
-        <h2 id="p3">Sobre nós</h2>
-        <p></p>
-        <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/1nyYZmujcPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
         <h2>localização</h2>
         <p></p>
         <div class="video" id="p4"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d116602.66264009502!2d-46.5020322!3d-24.0369462!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5a99a581e4c6a9f%3A0x4821b70ebb953fab!2sAmarildo%20Carretos!5e0!3m2!1spt-BR!2sbr!4v1684975161565!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
