--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                   <li><a href="precos/precos.html" id="button" class="menuf">Orçamento</a></li>
                   <li><button onclick="scrollToDiv1()" class="p1">Como funcionara o frete</button></li>
                   <li><button onclick="scrollToDiv2()" class="p2">Porque nos contratar</button></li>
+                  <button onclick="scrollToDiv5()" class="p5">Tamanho do Baú</button>
                   <li><button onclick="scrollToDiv3()" class="p3">Quem somos</button></li>
                   <li><button onclick="scrollToDiv4()" class="p4">Localização</button></li>
                 </ul>
@@ -44,6 +45,7 @@
             <a href="precos/precos.html" id="button" class="menu">Orçamento</a>
             <button onclick="scrollToDiv1()" class="p1">Como funcionara o frete</button>
             <button onclick="scrollToDiv2()" class="p2">Porque nos contratar</button>
+            <button onclick="scrollToDiv5()" class="p5">Tamanho do Baú</button>
             <button onclick="scrollToDiv3()" class="p3">Quem somos</button>
             <button onclick="scrollToDiv4()" class="p4">Localização</button>
         </nav>
@@ -60,13 +62,11 @@
         <h2 id="p1">Como vai funciona o frete ?</h2>
         
         <p>Utilizando um caminhão equipado com um compartimento fechado feito de metal, conhecido como baú, que oferece proteção e segurança para a carga durante o transporte.</p>
-        <strong>
-            <p>Tendo o compartimento baú com 6,60 Metros de Comprimento, 2,20 Metros de Larguras e 2,40 Metros de Altura.</p>
-        </strong>
         <picture>
             <source media="(max-width: 530px)" srcset="imagens/001.jpeg">
             <img src="imagens/002.jpeg" alt="imagem de caminhão baú" class="caminhao">
-        </picture>
+        <picture> 
+            <img src="imagens/comprimento1.jpg" alt="imagem de caminhão baú tamanho" class="caminhao" id="p5">
         <p>Faremos sua mudança residencial ou de escritório, em <strong>Praia Grande e região</strong> para todo o <strong>Estado de São Paulo</strong>.</p>
         <p>Desmontados e montamos guarda roupas, armários, estantes, camas e sofás (exceto furações em paredes).</p>
     </section>
