--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <li><a href="precos/precos.html" id="button" class="menuf">Orçamento</a></li>
                   <li><button onclick="scrollToDiv1()" class="p1">Como funcionara o frete</button></li>
                   <li><button onclick="scrollToDiv2()" class="p2">Porque nos contratar</button></li>
-                  <button onclick="scrollToDiv5()" class="p5">Tamanho do Baú</button>
+                  <li><button onclick="scrollToDiv5()" class="p5">Tamanho do Baú</button></li>
                   <li><button onclick="scrollToDiv3()" class="p3">Quem somos</button></li>
                   <li><button onclick="scrollToDiv4()" class="p4">Localização</button></li>
                 </ul>
@@ -80,6 +80,7 @@
     <aside> <!-- conteudo extra -->
         <h3 id="p2">Porque nos contratar ?</h3>
         <p>Essas são algumas das vantagens do nosso serviço. </p>
+        
         <ul>
             <li>1 - <abbr title="Os caminhões baú são altamente versáteis e podem transportar uma ampla variedade de mercadorias, desde alimentos perecíveis até móveis e equipamentos pesados">Versatilidade:</abbr><!--abreviatura --></li>
             <li>2 - <abbr title="Os caminhões baú oferecem proteção contra as condições climáticas, como chuva, sol intenso e poeira, ajudando a preservar a qualidade e integridade dos produtos durante o transporte.">Proteção dos produtos:</abbr></li>
