--- a/precos/precos.html
+++ b/precos/precos.html
@@ -15,12 +15,12 @@
             <source media="(max-width: 930px)" srcset="../imagens/logoM.png">
             <img src="../imagens/logoG.png" alt="logo amarildo">
         </picture>
-        <H2>Preço Médio Orçamento</H1>
+       
+        <div id="botao"> <H2>Preço Médio Orçamento</H1>
 
-        <div id="botao">
                 <a href="../index.html"><img src="../imagens/volta.png" id="navfoto" alt="Botão" onclick="mostrarLinks()"></a>
         </div>  
-    </header>
+    
     <nav><!--navegador -->
         <a href="../index.html" id="button" class="menu">Voltar</a>
     </nav>
