--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <div class="minha-div" id="links" style="display: none;">
                 <ul>
                   <li><a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="button" class="menuf">Contato: (13) 99724-5567</a></li>
-                  <li><a href="precos/precos.html" id="button" class="menuf">Orçamento</a></li>
+                  <li><button onclick="scrollToDiv6()" class="p6">Orçamento</button></li>
                   <li><button onclick="scrollToDiv1()" class="p1">Como funcionara o frete</button></li>
                   <li><button onclick="scrollToDiv2()" class="p2">Porque nos contratar</button></li>
                   <li><button onclick="scrollToDiv5()" class="p5">Tamanho do Baú</button></li>
@@ -95,6 +95,9 @@
         <p></p>
         <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/1nyYZmujcPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
     </section>
+    
+    <p></p>
+    <section>
     <H2 id="p6">Preço Médio Orçamento</H2>
     <p></p>
     </div>
@@ -116,6 +119,11 @@
             Preencha os dados acima para ver o preço médio!
         </div>
     </section>
+    </section>
+    <p></p>
+    <ul>
+    <li style="background-color: #0e063d;;"><a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="button" class="menuf">Contato pelo WhatsApp:<br>(13) 99724-5567</a></li>
+    </ul>
         <p></p>
     <section>
         <h2>localização</h2>
