--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               
               <div class="minha-div" id="links" style="display: none;">
                 <ul>
-                  <li><a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="button" class="menuf">Contato: (13) 99724-5567</a></li>
+                  <li><a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="button" class="menuf btnWhatsapp">Contato: (13) 99724-5567</a></li>
                   <li><button onclick="scrollToDiv6()" class="p6">Orçamento</button></li>
                   <li><button onclick="scrollToDiv1()" class="p1">Como funcionara o frete</button></li>
                   <li><button onclick="scrollToDiv2()" class="p2">Porque nos contratar</button></li>
@@ -50,7 +50,7 @@
                 <img src="imagens/lopes.png" id="navfoto" alt="Botão" onclick="mostrarLinks()">
               </div>
               <nav><!--navegador -->
-                    <a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="button" class="menu">Contato: (13) 99724-5567</a>
+                    <a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="button" class="menu btnWhatsapp">Contato: (13) 99724-5567</a>
                     <button onclick="scrollToDiv6()" class="p6">Orçamento</button>
                     <button onclick="scrollToDiv1()" class="p1">Como funcionara o frete</button>
                     <button onclick="scrollToDiv2()" class="p2">Porque nos contratar</button>
@@ -70,6 +70,7 @@
         <h1>O serviço de transporte mais rápido e seguro do Brasil</h1>
         <div class="imagem" id="img01">
             <p id="pt1">Possuímos funcionários treinados e qualificados para oferecer um serviço com a maior segurança para a tranquilidade de nossos clientes.</p>
+            <div style="text-align: center;"><button style="margin: 0 auto;"><a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="bbb1" class="btnWhatsapp">Contato pelo WhatsApp: (13) 99724-5567</a></button></div>
         </div> 
         <p></p>
         <h2 id="p1">Como vai funciona o frete ?</h2>
@@ -136,7 +137,7 @@
     </section>
     <p></p>
     <ul>
-    <li style="background-color: #0e063d;;"><a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="button" class="menuf">Contato pelo WhatsApp:<br>(13) 99724-5567</a></li>
+    <li style="background-color: #0e063d;;"><a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="button" class="menuf btnWhatsapp">Contato pelo WhatsApp:<br>(13) 99724-5567</a></li>
     </ul>
         <p></p>
     <section>
