--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1>O serviço de transporte mais rápido e seguro do Brasil</h1>
         <div class="imagem" id="img01">
             <p id="pt1">Possuímos funcionários treinados e qualificados para oferecer um serviço com a maior segurança para a tranquilidade de nossos clientes.</p>
-            <div style="text-align: center;"><button style="margin: 0 auto;"><a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="bbb1" class="btnWhatsapp">Contato pelo WhatsApp: (13) 99724-5567</a></button></div>
+            <div style="text-align: center;;"><button style="margin: 0 auto;  background-color: #25d366"><a href="https://api.whatsapp.com/send?phone=5513997245567" target="_blank" id="bbb1" class="btnWhatsapp">Contato pelo WhatsApp: (13) 99724-5567</a></button></div>
         </div> 
         <p></p>
         <h2 id="p1">Como vai funciona o frete ?</h2>
